--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
   padding: 20px;
 }
 
-.display input {
+.display {
   width: 100%;
   height: 60px;
   background-color: #ecf0f1;
@@ -83,4 +83,9 @@ button:hover {
 
 .zero {
   width: 130px;
+}
+
+.squareRoot,
+.sign {
+  background-color: lightblue;
 }
